Apply various IntelliJ autofixes. This is absolutely safe. (#731)